--- a/app/src/main/res/layout/activity_feed_principal.xml
+++ b/app/src/main/res/layout/activity_feed_principal.xml
@@ -22,6 +22,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <ImageButton
+        android:id="@+id/btnPerfil"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="Ir para perfil"
+        android:src="@drawable/ic_person"
+        android:tint="#FFFFFF"
+        android:layout_margin="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewFeed"
         android:layout_width="0dp"
@@ -34,4 +46,3 @@
         android:clipToPadding="false"
         android:padding="16dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
-
