--- a/app/src/main/res/layout/activity_perfil_usuario.xml
+++ b/app/src/main/res/layout/activity_perfil_usuario.xml
@@ -79,13 +79,14 @@
         android:id="@+id/btnSair"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#CF6679"
+        android:onClick="Sair"
         android:text="Sair"
         android:textColor="#FFFFFF"
-        android:backgroundTint="#CF6679"
-        app:layout_constraintTop_toBottomOf="@id/btnMeusVoluntariados"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"
-        android:layout_marginHorizontal="16dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnMeusVoluntariados" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
