--- a/app/src/main/res/layout/activity_feed_principal.xml
+++ b/app/src/main/res/layout/activity_feed_principal.xml
@@ -13,26 +13,29 @@
         android:id="@+id/tvTituloFeed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:text="Vagas de Voluntariado"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="#FFFFFF"
-        android:layout_marginTop="24dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/btnPerfil"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_margin="16dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="50dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:contentDescription="Ir para perfil"
         android:src="@drawable/ic_person"
         android:tint="#FFFFFF"
-        android:layout_margin="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintBottom_toTopOf="@+id/recyclerViewFeed"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewFeed"
@@ -52,9 +55,12 @@
         android:layout_height="42dp"
         android:layout_gravity="end"
         android:layout_margin="16dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="50dp"
         android:backgroundTint="#4CAF50"
         android:text="Criar Vaga"
         android:textColor="#FFFFFF"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="24dp" />
+        app:layout_constraintBottom_toTopOf="@+id/recyclerViewFeed"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
