--- a/app/src/main/res/layout/item_historico.xml
+++ b/app/src/main/res/layout/item_historico.xml
@@ -49,6 +49,21 @@
             app:layout_constraintTop_toBottomOf="@id/tvDescricao"
             app:layout_constraintStart_toStartOf="parent"/>
 
+        <TextView
+            android:id="@+id/tvHorario"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="48dp"
+            android:padding="4dp"
+
+            android:text="14:00"
+            android:textColor="#FFFFFF"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvNomeOng" />
+
         <Button
             android:id="@+id/btnDetalhes"
             android:layout_width="wrap_content"
@@ -59,6 +74,7 @@
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/tvDescricao"
             app:layout_constraintEnd_toEndOf="parent"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
 
