--- a/app/src/main/res/layout/activity_feed_principal.xml
+++ b/app/src/main/res/layout/activity_feed_principal.xml
@@ -11,14 +11,33 @@
 
     <TextView
         android:id="@+id/tvTituloFeed"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
         android:text="Vagas de Voluntariado"
         android:textColor="#FFFFFF"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnPerfil"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/btnCriarVaga"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnCriarVaga"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#BB86FC"
+        android:paddingStart="12dp"
+        android:paddingTop="8dp"
+        android:paddingEnd="12dp"
+        android:paddingBottom="8dp"
+        android:text="Criar"
+        android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,41 +45,25 @@
         android:id="@+id/btnPerfil"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_margin="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginTop="24dp"
-        android:layout_marginBottom="50dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:contentDescription="Ir para perfil"
         android:src="@drawable/ic_person"
         android:tint="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerViewFeed"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewFeed"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
+        android:clipToPadding="false"
+        android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@id/tvTituloFeed"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:clipToPadding="false"
-        android:padding="16dp"/>
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-    <Button
-        android:id="@+id/btnCriarVaga"
-        android:layout_width="79dp"
-        android:layout_height="42dp"
-        android:layout_gravity="end"
-        android:layout_margin="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="50dp"
-        android:backgroundTint="#4CAF50"
-        android:text="Criar Vaga"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerViewFeed"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
