--- a/app/src/main/res/layout/activity_historico_servicos.xml
+++ b/app/src/main/res/layout/activity_historico_servicos.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/mainHistorico"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/black"
+    android:onClick="voltarPerfil"
     android:orientation="vertical"
-    android:padding="16dp"
-    android:background="@android:color/black">
+    android:padding="16dp">
 
     <!-- Título -->
     <TextView
         android:id="@+id/tvTituloHistorico"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Histórico de Serviços"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:textColor="@android:color/white"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginBottom="16dp"
+        android:text="Histórico de Serviços"
+        android:textColor="@android:color/white"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <!-- RecyclerView para listar os serviços -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvHistorico"
-        android:layout_width="374dp"
-        android:layout_height="503dp"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_weight="1"
         android:scrollbars="vertical" />
 
@@ -33,19 +33,21 @@
         android:id="@+id/tvSemHistorico"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Você ainda não se voluntariou para nenhum serviço."
-        android:textSize="16sp"
-        android:textColor="@android:color/white"
+        android:layout_marginTop="16dp"
         android:gravity="center"
-        android:visibility="gone"
-        android:layout_marginTop="16dp" />
+        android:text="Você ainda não se voluntariou para nenhum serviço."
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
+        android:visibility="gone" />
 
     <!-- Botão de Voltar -->
     <Button
         android:id="@+id/btnVoltarHistorico"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Voltar"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#BB86FC"
+        android:onClick="voltarPerfil"
+        android:text="Voltar" />
 
 </LinearLayout>
