--- a/app/src/main/res/layout/item_historico.xml
+++ b/app/src/main/res/layout/item_historico.xml
@@ -15,7 +15,7 @@
         android:padding="16dp">
 
         <TextView
-            android:id="@+id/tvNomeOng"
+            android:id="@+id/txtNomeOng"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="ONG Esperança"
@@ -34,7 +34,7 @@
             android:textColor="#FFFFFF"
             android:textSize="14sp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/tvNomeOng"
+            app:layout_constraintTop_toBottomOf="@id/txtNomeOng"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -62,7 +62,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvNomeOng" />
+            app:layout_constraintTop_toBottomOf="@id/txtNomeOng" />
 
         <Button
             android:id="@+id/btnDetalhes"
