--- a/app/src/main/res/layout/activity_detalhes.xml
+++ b/app/src/main/res/layout/activity_detalhes.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
@@ -20,7 +19,9 @@
         android:id="@+id/textOngName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="12dp"
+        android:layout_marginEnd="10dp"
         android:text="Nome da ONG"
         android:textColor="#B0B0B0"
         android:textSize="16sp"
@@ -33,7 +34,9 @@
         android:id="@+id/textLocation"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="10dp"
         android:text="Local: Rua Exemplo, 123"
         android:textColor="#B0B0B0"
         android:textSize="16sp"
@@ -43,12 +46,15 @@
         app:layout_constraintTop_toBottomOf="@id/textOngName" />
 
     <Button
-        android:id="@+id/btnParticipar1"
+        android:id="@+id/btnVoltar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="10dp"
         android:backgroundTint="#BB86FC"
-        android:text="Voluntariar-se"
+        android:onClick="setBtnVoltar"
+        android:text="Voltar"
         android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -59,7 +65,9 @@
         android:id="@+id/textServiceName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="236dp"
+        android:layout_marginEnd="10dp"
         android:text="Nome do Serviço Voluntário"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
@@ -73,7 +81,9 @@
         android:id="@+id/textTime"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="10dp"
         android:text="Horário: 10h às 14h"
         android:textColor="#B0B0B0"
         android:textSize="16sp"
