--- a/app/src/main/res/layout/item_historico.xml
+++ b/app/src/main/res/layout/item_historico.xml
@@ -15,7 +15,7 @@
         android:padding="16dp">
 
         <TextView
-            android:id="@+id/txtNomeOng"
+            android:id="@+id/txtServiceName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="ONG Esperança"
@@ -34,46 +34,20 @@
             android:textColor="#FFFFFF"
             android:textSize="14sp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/txtNomeOng"
+            app:layout_constraintTop_toBottomOf="@id/txtServiceName"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
-
-        <TextView
-            android:id="@+id/tvLocal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="São Paulo - SP"
-            android:textColor="#B0B0B0"
-            android:textSize="12sp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/tvDescricao"
-            app:layout_constraintStart_toStartOf="parent"/>
-
-        <TextView
-            android:id="@+id/tvHorario"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="48dp"
-            android:padding="4dp"
-
-            android:text="14:00"
-            android:textColor="#FFFFFF"
-            android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/txtNomeOng" />
 
         <Button
             android:id="@+id/btnDetalhes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:backgroundTint="#BB86FC"
             android:text="Detalhes"
             android:textColor="#000000"
-            android:backgroundTint="#BB86FC"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/tvDescricao"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvDescricao" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
