--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -104,11 +104,11 @@
         android:id="@+id/tvRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Não tem conta? Cadastre-se"
-        android:textColor="#BB86FC"
-        app:layout_constraintTop_toBottomOf="@id/btnLogin"
         android:layout_marginTop="16dp"
+        android:text="@string/cadastro"
+        android:textColor="#BB86FC"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/btnLogin" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
