--- a/app/src/main/res/layout/activity_service_description.xml
+++ b/app/src/main/res/layout/activity_service_description.xml
@@ -46,10 +46,10 @@
         android:id="@+id/btnParticipar1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="56dp"
         android:backgroundTint="#BB86FC"
         android:text="Voluntariar-se"
-        android:textColor="#000000"
+        android:textColor="#121212"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,8 +73,21 @@
         android:id="@+id/textTime"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="8dp"
         android:text="Horário: 10h às 14h"
+        android:textColor="#B0B0B0"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textLocation" />
+
+    <TextView
+        android:id="@+id/textData"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
+        android:text="Data: 14/05/2025"
         android:textColor="#B0B0B0"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
