--- a/app/src/main/res/layout/activity_voluntarios.xml
+++ b/app/src/main/res/layout/activity_voluntarios.xml
@@ -1,69 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Voluntarios">
+    android:background="#121212"
+    android:padding="16dp">
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:background="#121212"
-        android:orientation="vertical"
-        android:padding="16dp"
-        tools:layout_editor_absoluteX="-30dp"
-        tools:layout_editor_absoluteY="0dp">
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Lista de Voluntarios"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp" />
 
+    <ListView
+        android:id="@+id/listViewVoluntarios"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_below="@id/textView"
+        android:layout_marginTop="16dp" />
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Lista de Voluntarios!"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp" />
+    <Button
+        android:id="@+id/btnAtualizar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/listViewVoluntarios"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#BB86FC"
+        android:onClick="setRefresh"
+        android:text="Atualizar"
+        android:textColor="#000000" />
 
-        <ListView
-            android:id="@+id/listViewVoluntarios"
-            android:layout_width="fill_parent"
-            android:layout_height="403dp" />
+    <Button
+        android:id="@+id/btnVoltar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btnAtualizar"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#BB86FC"
+        android:onClick="setVoltar"
+        android:text="Voltar"
+        android:textColor="#000000" />
 
-        <Button
-            android:id="@+id/btnAtualizar"
-            android:layout_width="fill_parent"
-            android:layout_height="59dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="76dp"
-            android:layout_marginEnd="10dp"
-            android:backgroundTint="#BB86FC"
-            android:onClick="setRefresh"
-            android:text="Atualizar"
-            android:textColor="#000000"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textTime" />
-        <Button
-            android:id="@+id/btnVoltar"
-            android:layout_width="fill_parent"
-            android:layout_height="59dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="76dp"
-            android:layout_marginEnd="10dp"
-            android:backgroundTint="#BB86FC"
-            android:onClick="setVoltar"
-            android:text="Voltar"
-            android:textColor="#000000"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textTime" />
-
-
-
-    </LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
