--- a/app/src/main/res/layout/item_feed.xml
+++ b/app/src/main/res/layout/item_feed.xml
@@ -53,12 +53,12 @@
             android:id="@+id/btnParticipar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Participar"
-            android:textColor="#000000"
-            android:backgroundTint="#BB86FC"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/tvDescricao"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            android:backgroundTint="#BB86FC"
+            android:text="Ajudar"
+            android:textColor="#000000"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvDescricao" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
 
